.page overflow-hidden delete and solve the problems caused by it to make it responsive.

--- a/file/index.css
+++ b/file/index.css
@@ -14,7 +14,7 @@ p { cursor: context-menu;  }
 .content { width: inherit; height: inherit; }
 #universe { width: 100%; height: 100%; }
 
-.page { width: 100%; height: 100vh; position: relative; overflow: hidden; }
+.page { width: 100%; height: 100vh; position: relative; }
 .hd { position: fixed; z-index: 999; width: 100%; }
 #hide { display: none; }
 .gnb { color: #fff; font-size: 35px; width: 1120px; margin: 0px auto; padding-top: 50px; }
@@ -46,13 +46,13 @@ p { cursor: context-menu;  }
 }
 
 /* home */
-#hi { display: block; width: 310px; text-align: center; font-size: 40px; margin: 40vh auto; }
+#hi { display: block; width: 310px; text-align: center; font-size: 40px; margin: auto; padding-top: 40vh; }
 #hi span { display: block; }
 
 /* about page */
 #about { padding-top: 33vh; padding-left: 6vw; }
-#about_wrap { width: 70%; min-width: 1150px; height: 50vh; margin: 0 auto; display: none; }
-#ab_box { float: left; margin-right: 4vw; margin-top: -7vh; transform: rotateZ(-10deg); font-size: 25px; }
+#about_wrap { width: 70%; min-width: 1150px; height: 50vh; margin: 0 auto; }
+#ab_box { float: left; opacity: 0; margin-right: 4vw; margin-top: -7vh; transform: rotateZ(-10deg); font-size: 25px; }
 #ab_img { display: block; height: 25vh; }
 
 #card { float: left; width: 857px; font-size: 23px; columns: 2; }
@@ -79,7 +79,8 @@ p { cursor: context-menu;  }
 #about_menu li { transform: rotateZ(-20deg); padding: 2vh 0; } */
 
 /* ability page */
-#planet_box { width: 87%; height: 85vh; margin: 13vh auto; position: relative; transition: 1s; }
+#ability { padding-top: 13vh; }
+#planet_box { width: 87%; height: 85vh; margin: auto; position: relative; transition: 1s; }
 .planet { cursor: pointer; width: 100%; height: 100%; }
 .planet_tit { position: absolute; display: block; font-size: 22px; }
 .planet_wrap { position: absolute; }
@@ -198,5 +199,5 @@ p { cursor: context-menu;  }
   19% { transform: rotateZ(15deg); width: 55px; left: 19%; bottom: 33vh; }
   100% { bottom: 94vh; left: 94%; width: 15px; }
 }
-#thank { font-size: 60px; text-align: center; margin: 45vh auto; }
+#thank { font-size: 60px; text-align: center; margin: auto; padding-top: 45vh; }
 #box { position: absolute; font-size: 30px; left: 10vw; bottom: 10vh; }
