--- a/file/tablet.css
+++ b/file/tablet.css
@@ -1,12 +1,12 @@
 @charset "utf-8";
 #hide { position: absolute; display: block; left: 100%; background-color: rgba(0,0,0,0.7); width: 100%; height: 100vh; padding-top: 15vh; }
-.gnb { color: #fff; font-size: 35px; width: 100%; margin: 0px auto; text-align: center; }
-.gnb li { transform: translateX(200px); margin-right: 0vw; opacity: 0; transition: 1s; float: none; padding-bottom: 15px; width: fit-content; margin: 0 auto; }
+.gnb { width: 100%; margin: 0px auto; text-align: center; }
+.gnb li { margin-right: 0vw; float: none; padding-bottom: 15px; width: fit-content; margin: 0 auto; }
 .gnb li:last-child { margin-right: auto; }
 #info { display: none; }
 
 /* home */
-#hi { display: block; width: 310px; text-align: center; font-size: 40px; margin: 42vh auto; }
+#hi { font-size: 40px; }
 
 /* about page */
 #about { padding-top: 20vh; padding-left: 0vw; }
@@ -31,7 +31,7 @@
 #ring { display: block; width: 100%; height: 100%; animation: circle 25s infinite linear; }
 #ring_tit { position: absolute; font-size: 28px; text-align: center; width: 100%; top: 40%; z-index: 888; text-shadow: 2px 2px 3px #000; }
 
-#planet_box { width: 95%; height: 27vh; float: right; margin-top: 13vh; position: relative; transition: 1s; }
+#planet_box { width: 95%; height: 27vh; float: right; position: relative; transition: 1s; }
 .planet { cursor: pointer; width: 100%; height: 100%; }
 .planet_tit { position: absolute; display: block; font-size: 18px; }
 .planet_wrap { position: absolute; }
